--- a/package.json
+++ b/package.json
@@ -5,17 +5,15 @@
   "scripts": {
     "firstTime": "npx aws-sdk-js-codemod -t v2-to-v3 .",
     "generate": "node scripts/commands.mjs",
+    "ceramic": "docker compose up",
     "dev": "node scripts/run.mjs",
     "nextDev": "next dev",
-    "ceramic": "CERAMIC_ENABLE_EXPERIMENTAL_COMPOSE_DB='true' ceramic daemon --config ./composedb.config.json",
-    "ceramic:local": "CERAMIC_ENABLE_EXPERIMENTAL_COMPOSE_DB='true' npx @ceramicnetwork/cli daemon",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.278.0",
-    "@ceramicnetwork/cli": "2.40.0",
     "@ceramicnetwork/common": "2.33.0",
     "@ceramicnetwork/http-client": "2.30.0",
     "@composedb/cli": "0.5.0",
