--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "@aws-sdk/client-s3": "^3.278.0",
     "@ceramicnetwork/common": "2.33.0",
     "@ceramicnetwork/http-client": "2.30.0",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
     "@composedb/cli": "0.5.0",
     "@composedb/client": "0.5.0",
     "@composedb/devtools": "0.5.0",
     "@composedb/devtools-node": "0.5.0",
     "@didtools/cacao": "2.0.0",
     "@didtools/pkh-ethereum": "0.1.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@ethereum-attestation-service/eas-sdk": "^0.29.0",
     "@metamask/sdk": "^0.5.6",
+    "@vercel/analytics": "^1.0.2",
     "alchemy-sdk": "^2.10.0",
     "axios": "^1.4.0",
     "chalk": "^5.1.2",
@@ -36,6 +41,7 @@
     "jdenticon": "^3.2.0",
     "lru_map": "^0.4.1",
     "next": "^12.0.4",
+    "next-auth": "^4.23.1",
     "ora": "^6.1.2",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
@@ -46,6 +52,7 @@
     "tailwind-merge": "^1.8.1",
     "tailwindcss": "^3.2.4",
     "tiny-invariant": "^1.3.1",
+    "wagmi": "^1.4.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
