--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "key-did-provider-ed25519": "^2.0.1",
     "key-did-resolver": "^2.1.3",
     "typescript": "^4.5.2",
-    "uint8arrays": "^4.0.2"
+    "uint8arrays": "^4.0.2",
+    "@types/react-dom": ""
   }
 }
