--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "firstTime": "npx aws-sdk-js-codemod -t v2-to-v3 .",
     "generate": "node scripts/commands.mjs",
     "ceramic": "docker compose up",
     "dev": "node scripts/run.mjs",
@@ -13,7 +12,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.278.0",
     "@ceramicnetwork/common": "2.33.0",
     "@ceramicnetwork/http-client": "2.30.0",
     "@chakra-ui/icons": "^2.1.1",
@@ -52,6 +50,7 @@
     "tailwind-merge": "^1.8.1",
     "tailwindcss": "^3.2.4",
     "tiny-invariant": "^1.3.1",
+    "viem": "^1.12.2",
     "wagmi": "^1.4.2",
     "zod": "^3.21.4"
   },
