--- a/package.json
+++ b/package.json
@@ -58,15 +58,15 @@
     "@composedb/types": "^0.3.0",
     "@datamodels/identity-profile-basic": "^0.2.0",
     "@glazed/types": "^0.2.0",
-    "@types/node": "^17.0.15",
-    "@types/react": "^18.0.0",
     "@types/styled-components": "^5.1.26",
-    "eslint": "^8.3.0",
-    "eslint-config-next": "^12.0.4",
     "key-did-provider-ed25519": "^2.0.1",
     "key-did-resolver": "^2.1.3",
-    "typescript": "^4.5.2",
     "uint8arrays": "^4.0.2",
-    "@types/react-dom": ""
+    "@types/node": "",
+    "@types/react": "",
+    "@types/react-dom": "",
+    "eslint": "",
+    "eslint-config-next": "",
+    "typescript": ""
   }
 }
