--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dayjs": "^1.11.9",
     "did-session": "^1.0.0",
     "dids": "^3.2.0",
-    "ethers": "5.7.2",
+    "ethers": "^6.7.1",
     "framer-motion": "^8.4.3",
     "graphql": "^16.6.0",
     "jdenticon": "^3.2.0",
@@ -58,15 +58,15 @@
     "@composedb/types": "^0.3.0",
     "@datamodels/identity-profile-basic": "^0.2.0",
     "@glazed/types": "^0.2.0",
-    "@types/styled-components": "^5.1.26",
-    "key-did-provider-ed25519": "^2.0.1",
-    "key-did-resolver": "^2.1.3",
-    "uint8arrays": "^4.0.2",
     "@types/node": "",
     "@types/react": "",
     "@types/react-dom": "",
+    "@types/styled-components": "^5.1.26",
     "eslint": "",
     "eslint-config-next": "",
-    "typescript": ""
+    "key-did-provider-ed25519": "^2.0.1",
+    "key-did-resolver": "^2.1.3",
+    "typescript": "",
+    "uint8arrays": "^4.0.2"
   }
 }
