--- a/package.json
+++ b/package.json
@@ -63,8 +63,14 @@
     "@types/react": "",
     "@types/react-dom": "",
     "@types/styled-components": "^5.1.26",
-    "eslint": "",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "eslint": "^8.0.1",
     "eslint-config-next": "",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
     "key-did-provider-ed25519": "^2.0.1",
     "key-did-resolver": "^2.1.3",
     "typescript": "",
