--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@didtools/pkh-ethereum": "0.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@ethereum-attestation-service/eas-sdk": "^0.29.0",
+    "@ethereum-attestation-service/eas-sdk": "^1.2.0-beta.0",
     "@metamask/sdk": "^0.5.6",
     "@vercel/analytics": "^1.0.2",
     "alchemy-sdk": "^2.10.0",
