--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lru_map": "^0.4.1",
     "next": "^12.0.4",
     "next-auth": "^4.23.1",
+    "openai": "^4.10.0",
     "ora": "^6.1.2",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
